ncc/testsuite/negative/fail-no-ctors.n
class C 
  { x () : void {} }

class M {
  static g () : C { C(3) }    // E: type `C' has no accessible constructors
}
